--- a/app/index.html
+++ b/app/index.html
@@ -18,142 +18,111 @@
     </style>
 </head>
 <script>
+    console.log('1');
     var LAppDefine = {
-        // 调试，true时会在console里显示日志
-        DEBUG_LOG: false,
-        DEBUG_MOUSE_LOG: false, // 鼠标相关日志
-        //  全部设定
-        //这里配置canvsa元素的id
-        CANVAS_ID: "mycanvas",
-        //是否开启滚轮缩放，默认true
-        IS_SCROLL_SCALE: false,
-        // 画面最大缩放级别
-        VIEW_MAX_SCALE: 2,
-        // 画面最小缩放级别
-        VIEW_MIN_SCALE: 0.8,
+    // 调试，true时会在console里显示日志
+    DEBUG_LOG: true,
+    DEBUG_MOUSE_LOG: false, // 鼠标相关日志
+    //  全部设定
+    //这里配置canvsa元素的id
+    CANVAS_ID: "mycanvas",
+    //是否开启滚轮缩放，默认true
+    IS_SCROLL_SCALE: false,
+    // 画面最大缩放级别
+    VIEW_MAX_SCALE: 2,
+    // 画面最小缩放级别
+    VIEW_MIN_SCALE: 0.8,
 
-        VIEW_LOGICAL_LEFT: -1,
-        VIEW_LOGICAL_RIGHT: 1,
+    VIEW_LOGICAL_LEFT: -1,
+    VIEW_LOGICAL_RIGHT: 1,
 
-        VIEW_LOGICAL_MAX_LEFT: -2,
-        VIEW_LOGICAL_MAX_RIGHT: 2,
-        VIEW_LOGICAL_MAX_BOTTOM: -2,
-        VIEW_LOGICAL_MAX_TOP: 2,
-        // 动作优先级常量
-        PRIORITY_NONE: 0,
-        PRIORITY_IDLE: 1,
-        PRIORITY_NORMAL: 2,
-        PRIORITY_FORCE: 3,
+    VIEW_LOGICAL_MAX_LEFT: -2,
+    VIEW_LOGICAL_MAX_RIGHT: 2,
+    VIEW_LOGICAL_MAX_BOTTOM: -2,
+    VIEW_LOGICAL_MAX_TOP: 2,
+    // 动作优先级常量
+    PRIORITY_NONE: 0,
+    PRIORITY_IDLE: 1,
+    PRIORITY_NORMAL: 2,
+    PRIORITY_FORCE: 3,
 
-        //是否绑定切换模型按钮
-        IS_BIND_BUTTON: true,
-        //绑定按钮元素id
-        BUTTON_ID: "Change",
-        //是否开启模型切换完成之前禁止按钮点击的选项，默认为true
-        IS_BAN_BUTTON: true,
-        //设置按钮禁止状态时的class，可自定义样式，前提是IS_BAN_BUTTON为true
-        BAN_BUTTON_CLASS: "inactive",
-        //设置按钮正常状态时的class
-        NORMAL_BUTTON_CLASS: "active",
-        //衣服切换模式 目前只支持两种 sequence-顺序 random-随机
-        //需事先配置好json文件里的textures属性
-        //暂不支持保存功能
-        TEXURE_CHANGE_MODE: "",
-        IS_START_TEXURE_CHANGE: true,
-        TEXURE_BUTTON_ID: "texure",
-        /**
-         *  模型定义
-            自定义配置模型，同一数组内放置两个模型则为开启双模型
-            三模型也只取数组里的前两个
-            模型出现的顺序与数组一致
-            这里请用相对路径配置
-        */
-        MODELS: [
-            ["./model/xiaomai/xiaomai.model.json"]
-        ],
-        NAME: "",
-        // 与外部定义的json文件匹配
-        MOTION_GROUP_IDLE: "idle", // 空闲时
-        MOTION_GROUP_TAP_BODY: "tap_body", // 点击身体时
-        MOTION_GROUP_FLICK_HEAD: "flick_head", // 抚摸头部
-        MOTION_GROUP_PINCH_IN: "pinch_in", // 放大时
-        MOTION_GROUP_PINCH_OUT: "pinch_out", // 缩小时
-        MOTION_GROUP_SHAKE: "shake", // 摇晃
-        //如果有自定义的动作分组可以放在这里
+    //是否绑定切换模型按钮
+    IS_BIND_BUTTON: true,
+    //绑定按钮元素id
+    BUTTON_ID: "Change",
+    //是否开启模型切换完成之前禁止按钮点击的选项，默认为true
+    IS_BAN_BUTTON: true,
+    //设置按钮禁止状态时的class，可自定义样式，前提是IS_BAN_BUTTON为true
+    BAN_BUTTON_CLASS: "inactive",
+    //设置按钮正常状态时的class
+    NORMAL_BUTTON_CLASS: "active",
+    //衣服切换模式 目前只支持两种 sequence-顺序 random-随机
+    //需事先配置好json文件里的textures属性
+    //暂不支持保存功能
+    TEXURE_CHANGE_MODE: "",
+    IS_START_TEXURE_CHANGE: true,
+    TEXURE_BUTTON_ID: "texure",
+    /**
+     *  模型定义
+         自定义配置模型，同一数组内放置两个模型则为开启双模型
+        三模型也只取数组里的前两个
+        模型出现的顺序与数组一致
+        这里请用相对路径配置
+    */
+    MODELS: [
+        // ["./model/xiaomai/xiaomai.model.json"],
+        // ["./model/liang/2.json"],
+        ["./model/xiaomai/xiaomai.model.json"]
+    ],
+    NAME: "",
+    // 与外部定义的json文件匹配
+    MOTION_GROUP_IDLE: "idle", // 空闲时
+    MOTION_GROUP_TAP_BODY: "tap_body", // 点击身体时
+    MOTION_GROUP_FLICK_HEAD: "flick_head", // 抚摸头部
+    MOTION_GROUP_PINCH_IN: "pinch_in", // 放大时
+    MOTION_GROUP_PINCH_OUT: "pinch_out", // 缩小时
+    MOTION_GROUP_SHAKE: "shake", // 摇晃
+    //如果有自定义的动作分组可以放在这里
 
-        // 与外部定义json文件相匹配
-        HIT_AREA_HEAD: "head",
-        HIT_AREA_BODY: "body",
-        //初始化的模型大小
-        SCALE: 1.1,
-        //新增属性，是否播放音频 默认为true
-        IS_PLAY_AUDIO: true,
-        THIS_TEXURE: 0,
-        FLAG:true,
-        //新增属性，audio标签id值
-        AUDIO_ID: "my_audio"
+    // 与外部定义json文件相匹配
+    HIT_AREA_HEAD: "head",
+    HIT_AREA_BODY: "body",
+    //初始化的模型大小
+    SCALE: 1.1,
+    //新增属性，是否播放音频 默认为true
+    IS_PLAY_AUDIO: true,
+    THIS_TEXURE: 0,
+    FLAG:true,
+    //新增属性，audio标签id值
+    AUDIO_ID: "my_audio"
     };
-    const path = require("path");
-    var dbPath = path.join(__dirname, '/db/db.json')
-    const low = require('lowdb');
-    const FileSync = require('lowdb/adapters/FileSync');
-    const adapter = new FileSync(dbPath);
-    const db = low(adapter);
-    //初始尺寸
-    var scale;
-
-    function setModelPath() {
-        //从dbjson里读取系统设置信息
-        var model = db.get("model").value();
-        var menu = db.get("menu").value();
-        var thisTexure = db.get("now_texure").value();
-        var sound = db.get("sound").value();
-        var models = [];
-        for (var i in menu) {
-            if (model == menu[i]) {
-                models.push(db.get("model_path").value()[i]);
-                LAppDefine.SCALE = db.get("model_size").value()[i];
-                scale = LAppDefine.SCALE;
-            }
-        }
-        LAppDefine.NAME = model;
-        LAppDefine.THIS_TEXURE = thisTexure;
-        LAppDefine.MODELS = [models];
-        LAppDefine.TEXURE_CHANGE_MODE = db.get("change_texure_way").value();
-        if(sound){
-            LAppDefine.AUDIO_ID = "my_audio";
-        }else{
-            LAppDefine.AUDIO_ID = "";
-        }
-    }
-    setModelPath();
+    console.log('2');
 </script>
 
+<!-- <div class="message" style="opacity:0.2;" width="300" height="50">dsdsdsd</div> -->
 <body onload="InitLive2D()" style="-webkit-app-region: drag">
     <audio id="my_audio"></audio>
-    <!-- <div class="message" style="opacity:0.2;" width="300" height="50">dsdsdsd</div> -->
     <canvas id="mycanvas" width="300" height="400"></canvas>
     <button id="Change" style="display:none"></button>
     <button id="texure" style="display:none"></button>
 </body>
 <script>
-    // You can also require other files to run in this process
-    // require('./renderer.js')
-</script>
-<script src="js/live2d.min.js"></script>
-<script>
-    const ipcRenderer = require('electron').ipcRenderer;
-    //console.log(ipcRenderer.sendSync('synchronous-message', 'ping')); // prints "pong"
-    //监听消息改变模型
-    ipcRenderer.on('changemodel', function (event, arg) {
+    // window.ipcRender.receive('changemodel', (arg) => {
+    //    alert('hi');
+    //    console.log(arg)
+    //     LAppDefine.MODELS[0] = ["./model/liang/2.json"]
+    //    InitLive2D();
+    //    console.log(db.get('menu'))
+    // });
+    window.ipcRender.receive('changemodel', (arg) => {
         var thisScale = LAppDefine.SCALE;
-        var menu = db.get("menu").value();
+        var menu = db.get("menu");
         var models = [];
         if (arg != '') {
             for (var i in menu) {
                 if (arg == menu[i]) {
-                    models.push(db.get("model_path").value()[i]);
-                    LAppDefine.SCALE = db.get("model_size").value()[i];
+                    models.push(db.get("model_path")[i]);
+                    LAppDefine.SCALE = db.get("model_size")[i];
                     LAppDefine.NAME = arg;
                 }
             }
@@ -162,50 +131,16 @@
         document.getElementById("Change").click();
         modelScaling(LAppDefine.SCALE / (thisScale));
     });
-    //监听消息改变服装
-    ipcRenderer.on('asynchronous-reply', function (event, arg) {
-        clickTexureButton();
-        db.set("now_texure",LAppDefine.THIS_TEXURE).write();
-    });
-    //监听模型声音设置的改变
-    ipcRenderer.on('set-up-sound',function(event,arg) {
-        if(arg){
-            LAppDefine.AUDIO_ID = "my_audio";
-        }else{
-            LAppDefine.AUDIO_ID = "";
-        }
-    });
-
-    function clickTexureButton() {
-        document.getElementById("texure").click();
-    }
-
-    //文件拖放删除
-    function initDragIn() {
-        window.ondragover = function (e) {
-            e.preventDefault();
-            e.dataTransfer.dropEffect = 'copy';
-            return false;
-        };
-
-        window.ondrop = function (e) {
-            e.preventDefault();
-            var files = [];
-            for (var i = 0; i < e.dataTransfer.files.length; ++i) {
-                console.log(e.dataTransfer.files[i].path);
-                files.push(e.dataTransfer.files[i].path);
-            }
-            ipcRenderer.send('deletefile', files);
-            return false;
-        };
-
-        window.ondragleave = function () {
-            return false;
-        };
-    }
-
-
-    initDragIn();
+    // window.dow.send('hellow');
 </script>
+
+<script>
+    // You can also require other files to run in this process
+    // require('./renderer.js')
+    console.log('3')
+</script>
+<script> src="main2.js" </script>
+<script src="js/live2d.min.js"></script>   
+<script> src="main.js"</script>
 
 </html>
